# Proyecto_OpenMP_RayTracer

./: CMakeLists.txt  README.md  Sphere.h  main.cpp
src/: Plane.h  Ray.h  Vector3.h
